# nemotron-voice-keyboard

./: .gitattributes  .gitignore  AndroidManifest.xml  Cargo.toml  LICENSE  READ-ME-YES-YOU-READ-THIS.txt  README.md  build.sh  build_aab.sh  crash_log.txt  generate_icon.py  patch_ort_sys.py
.cargo/: config.toml
.github/workflows/: android_release.yml
assets/nemotron-model/: README.md
libs/onnxruntime/: AndroidManifest.xml
nemotron_lib/: Cargo.toml  README.md
nemotron_lib/src/: audio.rs  model_nemotron.rs  model_tdt.rs  nemotron.rs  sortformer.rs
res/drawable/: bg_card.xml
res/layout/: activity_main.xml  ime_layout.xml
res/values/: colors.xml  strings.xml
res/values-night/: colors.xml
res/xml/: method.xml  recognition_service.xml
scripts/: download_nemotron_model.sh
src/: assets.rs  engine.rs  ime.rs  itn.rs  lib.rs  main_activity.rs  subtitle.rs
src/java/com/catfewd/nemotron/: LiveSubtitleActivity.java  LiveSubtitleService.java  MainActivity.java  NemotronRecognitionService.java  RecognizeActivity.java  RustInputMethodService.java
src/java/dev/notune/transcribe/: MainActivity.java  NemotronRecognitionService.java  RecognizeActivity.java  RustInputMethodService.java
